--- a/1.htm
+++ b/1.htm
@@ -26,51 +26,60 @@
   <title>Akshat Jain | Frontend Developer</title>
   <link rel="stylesheet" href="contentstyle.css" />
 </head>
-<body>
-  <header>
-    <nav>
-      <a id="about" href="#">About</a>
-      <a id="contact" href="#">Contact</a>
-      <a href="mailto:akshatjain1604@gmail.com">Email</a>
-      <a href="https://www.instagram.com/akshatjain1604/">Insta</a>
-      <a href="#">LinkedIn</a>
-    </nav>
+  <body>
+  <nav>
 
-    <div id="about-popup" class="popup">
-      <h2>About Me</h2>
-      <p>I'm Akshat Jain, a frontend developer passionate about interactive design, animation, and clean code. I specialize in HTML, CSS, JavaScript, and DOM manipulation, and I'm expanding into backend and deployment.</p>
-    </div>
+    <a id="about" href="#about-section">About</a>
+    <a id="contact" href="#contact-section">Contact</a>
+    <a href="https://mail.google.com/mail/u/0/#sent?compose=GTvVlcRwQnchfKNWCtSTthZXllVdKxczQlDjvxPGcSlFmCPsgdwwrLhqwlMtGnmXHqDFWnmNTMZlh">Email</a>
+    <a href="https://www.instagram.com/akshatjain1604/">Insta</a>
+    <a href="#">linkedIn</a>
 
-    <div id="contact-popup" class="popup">
-      <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:akshatjain1604@gmail.com">akshatjain1604@gmail.com</a></p>
-      <p>Instagram: <a href="https://www.instagram.com/akshatjain1604/" target="_blank">@akshatjain1604</a></p>
-    </div>
-  </header>
-
+  </nav>
   <main>
     <section class="intro-section">
-      <img class="bg-Img" src="bgimg.jpg" alt="Background Image" />
+      <img class="bg-Img" src="bgimg.jpg" alt="Background Image">
       <div class="name">
-        <div class="description"></div>
-        <img class="myimg" src="kairo.jpg" alt="Profile Photo" />
+        <div class="description">
+        </div>
+        <img class="myimg" src="kairo.jpg" alt="Profile Photo">
       </div>
     </section>
 
     <section class="section">
       <h2>Frontend Developer | Aspiring Freelancer</h2>
-      <p>Resilient and hands-on developer with a passion for interactive web experiences, creative DOM manipulation, and secure, user-friendly design. Methodical in debugging, refactoring, and automating workflows. Currently expanding into backend and deployment to offer full-stack solutions.</p>
+      <p>Resilient and hands-on developer with a passion for interactive web experiences, creative DOM manipulation, and
+        secure, user-friendly design. Methodical in debugging, refactoring, and automating workflows. Currently
+        expanding into backend and deployment to offer full-stack solutions.</p>
     </section>
 
     <section class="section">
       <h2>Technical Skills</h2>
       <table>
-        <tr><th>Category</th><th>Skills</th></tr>
-        <tr><td>Frontend</td><td>HTML5, CSS3, JavaScript, DOM Manipulation, Event Handling</td></tr>
-        <tr><td>Storage & State</td><td>localStorage, SessionStorage, Dynamic UI Updates</td></tr>
-        <tr><td>Automation</td><td>PowerShell Scripting, Execution Policies, npm Workflows</td></tr>
-        <tr><td>Tools & Platforms</td><td>VS Code, Git/GitHub, Chrome DevTools</td></tr>
-        <tr><td>Soft Skills</td><td>Troubleshooting, Iterative Development, Client Communication</td></tr>
+        <tr>
+          <th>Category</th>
+          <th>Skills</th>
+        </tr>
+        <tr>
+          <td>Frontend</td>
+          <td>HTML5, CSS3, JavaScript, DOM Manipulation, Event Handling</td>
+        </tr>
+        <tr>
+          <td>Storage & State</td>
+          <td>localStorage, SessionStorage, Dynamic UI Updates</td>
+        </tr>
+        <tr>
+          <td>Automation</td>
+          <td>PowerShell Scripting, Execution Policies, npm Workflows</td>
+        </tr>
+        <tr>
+          <td>Tools & Platforms</td>
+          <td>VS Code, Git/GitHub, Chrome DevTools</td>
+        </tr>
+        <tr>
+          <td>Soft Skills</td>
+          <td>Troubleshooting, Iterative Development, Client Communication</td>
+        </tr>
       </table>
     </section>
 
@@ -110,9 +119,9 @@
 
     <section class="section">
       <h2>Education</h2>
-      <p><strong>Bachelor’s Degree (or Current Student)</strong><br />
-      [Your University Name], [City]<br />
-      [Year] – [Year or “Expected”]</p>
+      <p><strong>Bachelor’s Degree (or Current Student)</strong><br>
+        [Your University Name], [City]<br>
+        [Year] – [Year or “Expected”]</p>
     </section>
 
     <section class="section">
@@ -124,28 +133,39 @@
       </ul>
     </section>
 
-    <section class="section">
-      <h2>Languages & Tools</h2>
-      <div class="container">
-        <div class="language">
-          <img src="css.png" alt="CSS" width="90" height="90" />
-          <img src="html.png" alt="HTML" width="100" height="90" />
-          <img src="js.png" alt="JavaScript" width="90" />
-          <img src="pyhton.png" alt="Python" width="90" />
-          <img src="c.png" alt="C Language" width="90" />
-          <img src="react.png" alt="React" width="90" />
-          <img src="node.png" alt="Node.js" width="90" />
-          <img src="git.png" alt="Git" width="90" height="90" />
-          <img src="github.png" alt="GitHub" width="90" height="90" />
-        </div>
+    <div class="container">
+      <div class="language">
+        <div id="cs"> <img src="css.png" width="90px" height="90px"></div>
+        <div id="html"> <img src="html.png" width="100" height="90px"></div>
+        <div id="js"> <img src="js.png" width="90"></div>
+        <div id="python"> <img src="pyhton.png" width="90"></div>
+        <div id="c"> <img src="c.png" width="90"></div>
+        <div id="react"> <img src="react.png" width="90"></div>
+        <div id="node"><img src="node.png" width="90"></div>
+        <div id="git"> <img src="git.png" width="90px" height="90px"></div>
+        <div id="github"><img src="github.png" width="90" height="90px"></div>
       </div>
-    </section>
+    
+      <div id="about-popup" class="popup">
+        <h2>About Me</h2>
+        <p>I'm Akshat Jain, a frontend developer passionate about interactive design, animation, and clean code. I
+          specialize in HTML, CSS, JavaScript, and DOM manipulation, and I'm expanding into backend and deployment.</p>
+      </div>
+
+      <div id="contact-popup" class="popup">
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:akshatjain1604@gmail.com">akshatjain1604@gmail.com</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/akshatjain1604/" target="_blank">@akshatjain1604</a></p>
+      </div>
+    </div>
+    <footer>
+      &copy; 2025 Akshat. All rights reserved.
+    </footer>
+
   </main>
-
-  <footer>
-    &copy; 2025 Akshat. All rights reserved.
-  </footer>
-
   <script src="script2.js"></script>
 </body>
+
 </html>
+
+   
